--- a/ch01.md
+++ b/ch01.md
@@ -1,12 +1,12 @@
 # Niet-normatieve deel
 
-Bijvoorbeeld een introductie is niet normatief.
+test123456
 
 <p class="note" title="index">
 Dit hoofdstuk is toegevoegd met `class="informative"` in `config.js`.
 </p>
 
-## Een subparagraaf
+## Een  test paragraaf
 
 Hier staat een tabel. Als de juiste style gekozen is ziet deze er goed uit.
 
