--- a/ch02.md
+++ b/ch02.md
@@ -7,7 +7,7 @@
 
 Afbeeldingen krijgen een nummer en vermelding in de figurenlijst [[[#tof]]].
 
-![](media/Bomos_levenscyclus.svg "Onderschrift")
+!(media/Bomos_levenscyclus.svg "Onderschrift")
 
 ## Referenties
 
